--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "supervielle-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://superviellev2.saludesvida.co/",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "convert-array-to-csv": "^2.0.0",
+    "cors": "^2.8.5",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
