--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "convert-array-to-csv": "^2.0.0",
     "cors": "^2.8.5",
+    "firebase": "^8.6.8",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
